# claude-ipc

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  COMPLETE.md  INITIAL_INSTRUCTIONS.md  LICENSE.md  README.md  SUMMARY.md  audit.toml  build.ps1  build.sh  package-lock.json  package.json  test-integration.sh
.githooks/: pre-push
.github/: FUNDING.yml
collab-cli/: Cargo.toml
collab-cli/src/: client.rs  init.rs  lifecycle.rs  main.rs  monitor.rs  team_cli.rs  worker.rs
collab-cli/tests/: cli_ux_e2e.rs  e2e_team.rs  migration_e2e.rs
collab-gui/: pnpm-lock.yaml
collab-gui/public/: app.css  app.js  app.min.js
collab-gui/src-tauri/: Cargo.toml
collab-gui/src-tauri/src/: commands.rs  lib.rs
collab-gui/tests/: dashboard.spec.mjs  features.spec.mjs  lighthouse.spec.mjs
collab-server/: Cargo.toml
collab-server/src/: db.rs  lib.rs  main.rs
collab-server/tests/: integration_test.rs
collab-vscode/: README.md  SPEC.md  package-lock.json
collab-vscode/src/: api.ts  commands.ts
collab-web/: index.html
ios/CollabClient/CollabClient.xcodeproj/: project.pbxproj
ios/CollabClient/Sources/CollabClient/Models/: AppConfig.swift  Message.swift  Metrics.swift  Todo.swift  Worker.swift
ios/CollabClient/Sources/CollabClient/Services/: CollabAPI.swift
tools/: ollama-web
workers/: dashboard-config.json
workers/builder/: CLAUDE.md
workers/database/: CLAUDE.md
workers/e2e-tester/: CLAUDE.md
workers/project-manager/: CLAUDE.md
workers/redteamer/: CLAUDE.md
workers/researcher/: CLAUDE.md
workers/ux-expert/: CLAUDE.md
(+4 files in other folders)
