[package]
name = "hold-my-beer-gui"
version = "0.1.0"
edition = "2021"
description = "Desktop GUI for Hold My Beer — AI team coordination"
license = "AGPL-3.0"

[lib]
name = "hold_my_beer_gui"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "hold-my-beer-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `devtools` (WebKit Web Inspector) is intentionally OFF. On macOS,
# enabling it causes the bundled app to preflight a whole bank of TCC
# services at launch (Camera/Microphone/Photos/Contacts/etc) — Apple's
# heuristic for "this WebKit host might call navigator.X from JS" —
# which is user-hostile for a dev-coordination app that has nothing to
# do with any of those. If you need the Web Inspector while working on
# the GUI, add `features = ["devtools"]` here TEMPORARILY, don't commit.
# Safari → Develop menu → Hold My Beer also works for poking at the
# webview without needing this feature.
tauri       = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
rand        = "0.8"
# Canonical per-platform paths: ~/.config on Linux, ~/Library/Application
# Support on macOS, %APPDATA% on Windows. Used for the wizard's saved config.
dirs        = "5"

[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
rfd = "0.15"
